kubernetes/apps/vaultwarden/vaultwarden/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.solonsstuff.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: solonsstuff-com-live-tls
